--- a/public/style.css
+++ b/public/style.css
@@ -1,66 +1,34 @@
 body {
-  font-family: sans-serif;
+  font-family: Muli;
+  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
+  color: #4a00e0;
+  height: 100vh;
 }
 
-a {
-  text-decoration: none;
-}
-
-label {
-  display: block;
-}
-
-nav a {
-  display: inline-block;
-  margin: 1em;
-}
-
-form div {
-  margin: 1em;
-  display: inline-block;
+h1 {
+  font-size: 3.5em;
+  line-height: 0;
+  margin-bottom: 0;
+  margin-top: 50px;
 }
 * {
-  font-family: Verdana, Arial, sans-serif;
+  font-family: Muli, Helvetica, Verdana, Arial, sans-serif;
 }
-a:link {
-  color: #000;
-  text-decoration: none;
-}
-a:visited {
-  color: #000;
-}
-a:hover {
-  color: #33f;
-}
-.button {
-  background: -webkit-linear-gradient(top, #008dfd 0, #0370ea 100%);
-  border: 1px solid #076bd2;
-  border-radius: 3px;
-  color: #fff;
-  display: none;
-  font-size: 13px;
-  font-weight: bold;
-  line-height: 1.3;
-  padding: 8px 25px;
-  text-align: center;
-  text-shadow: 1px 1px 1px #076bd2;
-  letter-spacing: normal;
-}
+
 .center {
   padding: 10px;
   text-align: center;
 }
 .final {
-  color: black;
+  color: #4a00e0;
   padding-right: 3px;
 }
 .interim {
-  color: gray;
+  color: #8e2de2;
 }
 .info {
-  font-size: 14px;
   text-align: center;
-  color: #777;
+  color: #8e2de2;
   display: none;
 }
 .right {
@@ -70,42 +38,40 @@ a:hover {
   display: inline-block;
   width: 45%;
   min-height: 40px;
-  text-align: left;
   vertical-align: top;
+  font-size: 1.5em;
 }
-#headline {
-  font-size: 40px;
-  font-weight: 300;
-}
+
 #info {
-  font-size: 20px;
+  margin-top: 20px;
+  font-size: 2em;
   text-align: center;
-  color: #777;
+  color: #8e2de2;
   visibility: hidden;
+  margin-bottom: 10px;
 }
+
 #results {
-  font-size: 14px;
-  font-weight: bold;
-  border: 1px solid #ddd;
+  font-size: 0.75em;
+  background: ffd662;
   padding: 15px;
   text-align: left;
-  min-height: 100px;
-  margin: 5px;
+  min-height: 75px;
+  margin-top: 10px;
 }
 
 #translation {
-  font-size: 14px;
-  font-weight: bold;
-  border: 1px solid #ddd;
+  font-size: 0.75em;
   padding: 15px;
   text-align: left;
-  min-height: 100px;
+  min-height: 75px;
   margin: 5px;
 }
 #start_button {
   border: 0;
   background-color: transparent;
   padding: 0;
+  box-shadow: 1px 1px 2px #8e2de2;
 }
 
 #start_button:hover {
@@ -113,9 +79,36 @@ a:hover {
 }
 
 .container {
-  width: 300px;
+  width: 175px;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
 }
 
 .container #start_img {
   width: 100%;
+}
+
+select {
+  background-color: #ffd662;
+  border: 2px solid #614d94;
+  border-radius: 0;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 0.7em;
+}
+
+#play_button {
+  background: #8e2de2;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.7em;
+  text-align: right;
+  padding: 5px;
+}
+
+#play_button:hover {
+  opacity: 0.5;
 }
